<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrayLight"
        tools:context=".presentation.movies.MoviesActivity">

    <ImageView
            android:id="@+id/listIvEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_empty_box"
            android:contentDescription="@string/cd_logo"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button_upcoming"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listRvMovies"
            android:layout_width="0dp"
            tools:listitem="@layout/item_recycler_movies"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="0dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_upcoming"/>
    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/listPbLoading"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:lottie_rawRes="@raw/movie_loader"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <Button
            android:text="@string/button_top_rated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:id="@+id/button_top_rated" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/button_upcoming" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/button_upcoming"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:id="@+id/button_upcoming"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintEnd_toStartOf="@+id/button_popular"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/button_top_rated"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/button_popular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:id="@+id/button_popular" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/button_upcoming" android:layout_marginStart="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>